# firecore-dependencies

./: Cargo.toml  README.md
examples/: hash_message.rs  random.rs
src/: borrow.rs  graphics.rs  lib.rs  music.rs  random.rs  sound.rs  timer.rs
src/borrow/: id.rs
src/graphics/: text.rs
src/positions/: coordinate.rs  destination.rs  global_position.rs  location.rs  mod.rs  pixel_offset.rs
src/text/: mod.rs
