[package]
name = "firecore-util"
version = "0.4.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["util"]
hash = ["ahash"]
util = []
random = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tinystr = { version = "0.4", features = ["serde"], optional = true }
ahash = { version = "0.7", features = ["serde"], optional = true }
smallvec = { version = "1.6", features = ["serde"], optional = true }

[[example]]
name = "random"
required-features = ["random"]