[package]
name = "firecore-dependencies"
version = "0.5.0-beta.2021-07-05"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = []
str = ["tinystr"]
vec = ["arrayvec"]
hash = ["hashbrown"]
ser = ["bincode"]
random = []
borrow = ["serde"]

[dependencies]

tinystr = { version="0.4", features=["serde"], optional=true }
arrayvec = { version="0.5", features=["serde"], optional=true }
hashbrown = { version="0.11", features=["serde"], optional=true }

bincode = { version="1.3", optional=true }

serde = { version="1.0", features=["derive"], optional=true }

[[example]]
name = "random"
required-features = ["random"]
